Solve the alignment between the burger menu and the logo on the navbar

--- a/src/components/NavBar/BurgerMenu/BurgerMenu.css
+++ b/src/components/NavBar/BurgerMenu/BurgerMenu.css
@@ -53,7 +53,7 @@ nav {
   align-items: center;
   justify-content: space-around;
   cursor: pointer;
-  /* margin-top: 10px; */
+  margin-top: 15px;
 }
 
 .bar {
